--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -12,11 +12,13 @@ build:
 requirements:
   build:
     - python
-    - openmm
+    - openmm >=7.2.0
+    - parmed >=2.7.3
 
   run:
     - python
-    - openmm
+    - openmm >=7.2.0
+    - parmed >=2.7.3
 
 test:
   requires:
