--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,17 @@ script:
   - conda config --add channels conda-forge
   - conda config --add channels omnia
   - conda config --add channels https://conda.anaconda.org/omnia/label/dev
-  # Install extras for OpenEye and testing
+  # Install extras for testing
   - conda install --yes --quiet pip nose nose-timer
   # Build the recipe
   - conda build devtools/conda-recipe
   # Install the package
   - conda install --yes --use-local ${PACKAGENAME}
+  # Test CHARMM conversion
+  - cd charmm && python convert_charmm.py && cd ..
   # Test the package
   #- cd devtools && nosetests $PACKAGENAME --nocapture --verbosity=2 --with-timer -a '!slow' && cd ..
-  - nosetests $PACKAGENAME --nocapture --verbosity=2 --with-timer
+  #- nosetests $PACKAGENAME --nocapture --verbosity=2 --with-timer
 
 os:
   - osx
