--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - conda config --add channels omnia
   - conda config --add channels https://conda.anaconda.org/omnia/label/dev
   # Install extras for testing
-  - conda install --yes --quiet pip nose nose-timer parmed
+  - conda install --yes --quiet pip nose nose-timer
   # Build the recipe
   - echo "Building the recipe..."
   - conda build devtools/conda-recipe
@@ -33,6 +33,7 @@ script:
   - echo "Testing the installed openmmforcefields ffxml files..."
   - cd devtools && nosetests ${PACKAGENAME}.tests.test_amber_import --nocapture --verbosity=2 --with-timer -a '!slow' && cd ..
   # Test AMBER conversion
+  - conda install --yes --quiet parmed yaml  
   - echo "Testing AMBER conversion..."
   - cd amber && python convert_amber.py && cd ..
   # Test CHARMM conversion
