--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -13,10 +13,14 @@ requirements:
   build:
     - python
     - openmm >=7.2.0
+    - parmed
+    - yaml
 
   run:
     - python
     - openmm >=7.2.0
+    - parmed
+    - yaml
 
 test:
   requires:
