--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -12,15 +12,13 @@ build:
 requirements:
   build:
     - python
-    - openmm >=7.2.0
-    - parmed
-    - yaml
 
   run:
     - python
     - openmm >=7.2.0
     - parmed
     - yaml
+    - ambertools
 
 test:
   requires:
