--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   # Add openmm dev build
   - conda config --add channels omnia/label/dev
   # Add AMBER channel
-  - conda config --add channels AmberMD
+  - conda config --add channels http://ambermd.org/downloads/ambertools/conda/
   # Install extras for testing
   - conda install --yes --quiet pip nose nose-timer
   # Build the recipe
