Install parmed from git

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ script:
   # Test the openmmforcefields package to make sure installed ffxml files are working
   - echo "Testing the installed openmmforcefields ffxml files..."
   - cd devtools && nosetests ${PACKAGENAME}.tests.test_amber_import --nocapture --verbosity=2 --with-timer -a '!slow' && cd ..
+  # TODO: Install parmed dev version; replace with parmed dependency in meta.yaml
+  - pip install git+https://github.com/jchodera/ParmEd.git@charmm-patches-2
   # Test AMBER conversion
   - echo "Testing AMBER conversion..."
   - cd amber && python convert_amber.py && cd ..
