--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - pip install git+https://github.com/jchodera/ParmEd.git@charmm-patches-2
   # Test AMBER conversion
   - echo "Testing AMBER conversion..."
-  - cd amber && python convert_amber.py && cd ..
+  - cd amber && python convert_amber.py --verbose && cd ..
   # Test CHARMM conversion
   - echo "Testing CHARMM conversion..."
   - cd charmm && python convert_charmm.py && cd ..
