--- a/amber/files/master.yaml
+++ b/amber/files/master.yaml
@@ -3,7 +3,7 @@
 # Structure: list - first entry - source package info, further entries - 1/resulting ffxml file
 
 - sourcePackage: AmberTools
-  sourcePackageVersion: 16
+  sourcePackageVersion: 17
 - MODE: LEAPRC
 - Source: leaprc.protein.ff14SB
   Reference:
@@ -73,16 +73,6 @@
     write_unused: True
   Test:
   - gaff
-#- Source: leaprc.phosaa10
-#  Reference:
-#  - >-
-#    Steinbrecher, T., Latzer, J., and Case, D.A. (2012). Revised AMBER parameters for bioorganic phosphates.
-#    J. Chem. Theory Comput. 8, 4405-4412.
-#  Options:
-#    filter_warnings: always
-#    write_unused: True
-#  Test:
-#  - protein_phospho
 - Source: leaprc.gaff2
   Reference:
   - >-
@@ -95,53 +85,50 @@
 - Source: leaprc.DNA.OL15
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Zgarbová, M.; Sponer, J.; Otyepka, M.; Cheatham, T.E. III; Galindo-Murillo, R.; Jurecka, P. 
+    Refinement of the Sugar-Phosphate Backbone Torsion Beta for AMBER Force Fields Improves the Description of Z- and B-DNA. 
+    J. Chem. Theor. and Comp., 2015, 12, 5723–5736.
   Test:
   - dna
 - Source: leaprc.DNA.bsc1
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Ivani, I.; Dans, P.D.; Noy, A.; Perez, A.; Faustino, I.; Hopsital, A.; Walther, J.; Andrio, P.; Goni, R.; 
+    Balaceanu, A.; Portella, G.; Battistini, F.; GelpÃ, J.L.; González, C.; Vendruscolo, M.; Laughton, C.A.; Harris, S.; Case, D.A.; Orozco, M. 
+    Parmbsc1: A refined force field for DNA simulations. Nature Meth., 2016, 13, 55–58.
   Test:
   - dna
 - Source: leaprc.RNA.OL3
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P. 
+    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles. 
+    J. Chem. Theory Comput., 2011, 7, 2886–2902.
   Test:
   - rna 
 - Source: leaprc.RNA.YIL
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P. 
+    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles. 
+    J. Chem. Theory Comput., 2011, 7, 2886–2902.
+  Test:
+  - rna
+- Source: leaprc.RNA.ROC
+  Reference:
+  - >-
+    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P. 
+    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles. 
+    J. Chem. Theory Comput., 2011, 7, 2886–2902.
   Test:
   - rna
 - Source: leaprc.protein.fb15
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Wang, L.-P., McKiernan, K.A., Gomes, J., Beauchamp, K.A., Head-Gordon, T., Rice, J.E., Swope, W.C., Martínez, T.J., and Pande, V.S. (2017). 
+    Building a More Predictive Protein Force Field: A Systematic and Reproducible Route to AMBER-FB15. J. Phys. Chem. B 121, 4023–4039.
   Test:
   - protein
-# Torsion problem
-#- Source: leaprc.protein.ff15ipq
-#  Reference:
-#  - >-
-#    Placeholder
-#    Placeholder
-#  Test:
-#  - protein
-#- Source: leaprc.protein.ff15ipq-vac
-#  Reference:
-#  - >-
-#    Placeholder
-#    Placeholder
-#  Test:
-#  - protein  
 - Source: oldff/leaprc.ff10
   Reference:
   - >-
@@ -242,8 +229,8 @@
 - Source: oldff/leaprc.DNA.bsc0
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Perez, A.; Marchan, I.; Svozil, D.; Sponer, J.; Cheatham, T.E.; Laughton, C.A.; Orozco, M. 
+    Refinement of the AMBER Force Field for Nucleic Acids: Improving the Description of alpha/gamma Conformers. Biophys. J., 2007, 92, 3817–3829.
   Test:
   - dna
 - Source: oldff/leaprc.ff14SB
@@ -254,7 +241,32 @@
   Test:
   - protein
   - nucleic
-# Problem  
+# FFs that couldn't be converted yet due to problems  
+#- Source: leaprc.phosaa10
+#  Reference:
+#  - >-
+#    Steinbrecher, T., Latzer, J., and Case, D.A. (2012). Revised AMBER parameters for bioorganic phosphates.
+#    J. Chem. Theory Comput. 8, 4405-4412.
+#  Options:
+#    filter_warnings: always
+#    write_unused: True
+#  Test:
+#  - protein_phospho
+# Torsion problem
+#- Source: leaprc.protein.ff15ipq
+#  Reference:
+#  - >-
+#    Placeholder
+#    Placeholder
+#  Test:
+#  - protein
+#- Source: leaprc.protein.ff15ipq-vac
+#  Reference:
+#  - >-
+#    Placeholder
+#    Placeholder
+#  Test:
+#  - protein  
 #- Source: oldff/leaprc.ff14ipq
 #  Reference:
 #  - >-
@@ -262,11 +274,11 @@
 #    Placeholder
 #  Test:
 #  - protein
-#  - nucleic  
+#  - nucleic
 # IONS & SOLVENTS
 - MODE: RECIPE
 - sourcePackage2: OpenMM
-  sourcePackageVersion2: 7.0
+  sourcePackageVersion2: 7.2
 - Source:
   - parm/frcmod.ionsjc_tip3p
   - parm/frcmod.ions234lm_126_tip3p
