--- a/amber/files/master.yaml
+++ b/amber/files/master.yaml
@@ -85,47 +85,47 @@
 - Source: leaprc.DNA.OL15
   Reference:
   - >-
-    Zgarbová, M.; Sponer, J.; Otyepka, M.; Cheatham, T.E. III; Galindo-Murillo, R.; Jurecka, P. 
-    Refinement of the Sugar-Phosphate Backbone Torsion Beta for AMBER Force Fields Improves the Description of Z- and B-DNA. 
+    Zgarbova, M.; Sponer, J.; Otyepka, M.; Cheatham, T.E. III; Galindo-Murillo, R.; Jurecka, P. 
+    Refinement of the Sugar-Phosphate Backbone Torsion Beta for AMBER Force Fields Improves the Description of Z- and B-DNA.
     J. Chem. Theor. and Comp., 2015, 12, 5723–5736.
   Test:
   - dna
 - Source: leaprc.DNA.bsc1
   Reference:
   - >-
-    Ivani, I.; Dans, P.D.; Noy, A.; Perez, A.; Faustino, I.; Hopsital, A.; Walther, J.; Andrio, P.; Goni, R.; 
-    Balaceanu, A.; Portella, G.; Battistini, F.; GelpÃ, J.L.; González, C.; Vendruscolo, M.; Laughton, C.A.; Harris, S.; Case, D.A.; Orozco, M. 
+    Ivani, I.; Dans, P.D.; Noy, A.; Perez, A.; Faustino, I.; Hopsital, A.; Walther, J.; Andrio, P.; Goni, R.;
+    Balaceanu, A.; Portella, G.; Battistini, F.; GelpÃ, J.L.; González, C.; Vendruscolo, M.; Laughton, C.A.; Harris, S.; Case, D.A.; Orozco, M.
     Parmbsc1: A refined force field for DNA simulations. Nature Meth., 2016, 13, 55–58.
   Test:
   - dna
 - Source: leaprc.RNA.OL3
   Reference:
   - >-
-    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P. 
-    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles. 
+    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P.
+    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles.
     J. Chem. Theory Comput., 2011, 7, 2886–2902.
   Test:
-  - rna 
+  - rna
 - Source: leaprc.RNA.YIL
   Reference:
   - >-
-    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P. 
-    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles. 
+    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P.
+    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles.
     J. Chem. Theory Comput., 2011, 7, 2886–2902.
   Test:
   - rna
 - Source: leaprc.RNA.ROC
   Reference:
   - >-
-    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P. 
-    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles. 
+    Zgarbova, M.; Otyepka, M.; Sponer, J.; Mladek, A.; Banas, P.; Cheatham, T.E.; Jurecka, P.
+    Refinement of the Cornell et al. Nucleic Acids Force Field Based on Reference Quantum Chemical Calculations of Glycosidic Torsion Profiles.
     J. Chem. Theory Comput., 2011, 7, 2886–2902.
   Test:
   - rna
 - Source: leaprc.protein.fb15
   Reference:
   - >-
-    Wang, L.-P., McKiernan, K.A., Gomes, J., Beauchamp, K.A., Head-Gordon, T., Rice, J.E., Swope, W.C., Martínez, T.J., and Pande, V.S. (2017). 
+    Wang, L.-P., McKiernan, K.A., Gomes, J., Beauchamp, K.A., Head-Gordon, T., Rice, J.E., Swope, W.C., Martínez, T.J., and Pande, V.S. (2017).
     Building a More Predictive Protein Force Field: A Systematic and Reproducible Route to AMBER-FB15. J. Phys. Chem. B 121, 4023–4039.
   Test:
   - protein
@@ -229,7 +229,7 @@
 - Source: oldff/leaprc.DNA.bsc0
   Reference:
   - >-
-    Perez, A.; Marchan, I.; Svozil, D.; Sponer, J.; Cheatham, T.E.; Laughton, C.A.; Orozco, M. 
+    Perez, A.; Marchan, I.; Svozil, D.; Sponer, J.; Cheatham, T.E.; Laughton, C.A.; Orozco, M.
     Refinement of the AMBER Force Field for Nucleic Acids: Improving the Description of alpha/gamma Conformers. Biophys. J., 2007, 92, 3817–3829.
   Test:
   - dna
@@ -241,7 +241,7 @@
   Test:
   - protein
   - nucleic
-# FFs that couldn't be converted yet due to problems  
+# FFs that couldn't be converted yet due to problems
 #- Source: leaprc.phosaa10
 #  Reference:
 #  - >-
@@ -266,7 +266,7 @@
 #    Placeholder
 #    Placeholder
 #  Test:
-#  - protein  
+#  - protein
 #- Source: oldff/leaprc.ff14ipq
 #  Reference:
 #  - >-
