Add generation of ffxml/lipid17_unmerged.xml to master.yaml

--- a/amber/files/master.yaml
+++ b/amber/files/master.yaml
@@ -8,7 +8,23 @@
 - Source: leaprc.lipid17
   Reference:
   - >-
-    Lipids
+    Skjevik, Å.A.; Madej, Benjamin D.; Walker, R.C.; Teigen, K.
+    Lipid11: A modular framework for lipid simulations using amber. J. Phys. Chem. B, 2012, 116, 11124–11136.
+  - >-
+    Dickson, C.J.; Rosso, L.; Betz, R.M.; Walker, R.C.; Gould, I.R.
+    GAFFlipid: a General Amber Force Field for the accurate molecular dynamics simulation of phospholipid. Soft Matter, 2012, 8, 9617.
+  - >-
+    Dickson, C.J.; Madej, B.D.; Skjevik, A.A.; Betz, R.M.; Teigen, K.; Gould, I.R.; Walker, R.C.
+    Lipid14: The Amber Lipid Force Field. J. Chem. Theory Comput., 2014, 10, 865–879.
+  - >-
+    Skjevik, Å.A.; Madej, B.D.; Dickson, C.J.; Teigen, K.; Walker, R.C.; Gould, I.R.
+    All-atom lipid bilayer self-assembly with the amber and charmm lipid force fields. Chem. Commun., 2015, 51, 4402–4405.
+  - >-
+    Skjevik, Å.A.; Madej, B.D.; Dickson, C.J.; Lin, C.; Teigen, K.; Walker, R.C.; Gould, I.R.
+    Simulations of lipid bilayer self-assembly using all-atom lipid force fields. Phys. Chem. Chem. Phys., 2016, 18, 10573– 10584.
+  - >-
+    Madej, B.D.; Gould, I.R.; Walker, R.C.
+    A Parameterization of Cholesterol for Mixed Lipid Bilayer Simula- tion within the Amber Lipid14 Force Field. J Phys Chem B, 2015, 119, 12424–12435.
   Test:
   - lipids
 - Source: leaprc.protein.ff14SB
