--- a/charmm/files/waters.yaml
+++ b/charmm/files/waters.yaml
@@ -1,5 +1,27 @@
 - sourcePackage: charmm36
   sourcePackageVersion: toppar_c36_aug15.tgz
+- Destination: waters_ions_default.xml
+  Source:
+    stream:
+     - toppar/toppar_water_ions.str
+     - toppar/stream/misc/toppar_ions_won.str
+  References:
+   tip3p:
+     - >-
+       W.L. Jorgensen; J.Chandrasekhar; J.D. Madura; R.W. Impey; M.L. Klein; "Comparison of simple potential functions for
+       simulating liquid water", J. Chem. Phys. 79 926-935 (1983).
+   ions:
+     - >-
+       Beglov, D. and Roux, B., Finite Representation of an Infinite Bulk System: Solvent Boundary Potential for
+       Computer Simulations, Journal of Chemical Physics, 1994, 100: 9050-9063
+     - zinc:
+       - >-
+         Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
+         Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+     - cations:
+       - >-
+         Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
+         Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
 - Destination: waters_ions_spc_e.xml
   Source:
     include:
