--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ script:
   - cd amber && python convert_amber.py --verbose && python merge_lipids.py && cd ..
   # Test CHARMM conversion
   - echo "Testing CHARMM conversion..."
-  - cd charmm && python convert_charmm.py && cd ..
+  - cd charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml && cd ..
 
 os:
   - osx
