--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,10 @@ script:
   - cd amber && python convert_amber.py --verbose && python merge_lipids.py && cd ..
   # Test CHARMM conversion
   - echo "Testing CHARMM conversion..."
-  - cd charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml && cd ..
+  # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
+  #- cd charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml && cd ..
+  - cd charmm && python convert_charmm.py --verbose --in files/waters.yaml && cd ..
+  - cd charmm && python test_charmm.py --verbose && cd ..
 
 os:
   - osx
