Integrate lipid merging prior to lipid validation in AMBER conversion script

--- a/amber/files/master.yaml
+++ b/amber/files/master.yaml
@@ -22,6 +22,8 @@
   Test:
   - protein
 - Source: leaprc.lipid17
+  CharmmFFXMLFilename: ../charmm/ffxml/charmm36_nowaters.xml
+  CharmmLipid2AmberFilename: files/charmmlipid2amber.csv
   Reference:
   - >-
     Skjevik, A.A.; Madej, Benjamin D.; Walker, R.C.; Teigen, K.
