--- a/amber/files/master.yaml
+++ b/amber/files/master.yaml
@@ -9,16 +9,18 @@
   Prefix: protein
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Debiec, K.T.; Cerutti, D.S.; Baker, L.R.; Gronenborn, A.M.; Case, D.A.; Chong, L.T.
+    Further along the Road Less Traveled: AMBER ff15ipq, an Original Protein Force Field Built on a Self-Consistent Physical Model.
+    J. Chem. Theory Comput., 2016, 12, 3926–3947.
   Test:
   - protein
 - Source: leaprc.protein.ff15ipq-vac
   Prefix: protein
   Reference:
   - >-
-    Placeholder
-    Placeholder
+    Debiec, K.T.; Cerutti, D.S.; Baker, L.R.; Gronenborn, A.M.; Case, D.A.; Chong, L.T.
+    Further along the Road Less Traveled: AMBER ff15ipq, an Original Protein Force Field Built on a Self-Consistent Physical Model.
+    J. Chem. Theory Comput., 2016, 12, 3926–3947.
   Test:
   - protein
 - Source: leaprc.lipid17
