--- a/charmm/files/waters.yaml
+++ b/charmm/files/waters.yaml
@@ -4,7 +4,8 @@
   Source:
     stream:
      - toppar/toppar_water_ions.str
-     #- toppar/stream/misc/toppar_ions_won.str # Contains ion Tm3p (Thulium +3 ion) that conflicts with TM3P
+    exclude_residues:
+     - TP3M
   References:
    tip3p:
      - >-
@@ -22,6 +23,8 @@
        - >-
          Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
          Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
+  Test:
+  - tests/watbox216.pdb
 - Destination: waters_ions_spc_e.xml
   Source:
     include:
