--- a/charmm/files/waters.yaml
+++ b/charmm/files/waters.yaml
@@ -24,7 +24,7 @@
          Won, Y., "Force Field for Monovalent, Divalent, and Trivalent Cations Developed under the Solvent Boundary
          Potential," Journal of Physical Chemistry A., 116: 11763-11767, 2012.
   Test:
-  - tests/watbox216.pdb
+    - tests/watbox216.pdb
 - Destination: waters_ions_spc_e.xml
   Source:
     include:
@@ -45,6 +45,9 @@
        - >-
          Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
          Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+  Test:
+    - tests/watbox216.pdb
+- Destination: waters_ions_spc.xml
   Source:
     include:
     stream:
@@ -64,6 +67,8 @@
        - >-
          Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
          Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+  Test:
+    - tests/watbox216.pdb
 - Destination: waters_ions_tip3p_pme_b.xml
   Source:
     include:
@@ -84,6 +89,8 @@
        - >-
          Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
          Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+  Test:
+    - tests/watbox216.pdb
 - Destination: waters_ions_tip3p_pme_f.xml
   Source:
     include:
@@ -104,6 +111,8 @@
        - >-
          Stote, R.H. and Karplus, M. Zinc Binding in Proteins and Solution: A Simple but Accurate Nonbonded
          Representation, PROTEINS: Structure, Function, and Genetics 23:12-31 (1995)
+  Test:
+    - tests/watbox216.pdb
 - Destination: waters_ions_tip4p_2005.xml
   Source:
     include:
