Disable osx tests since LEaP segfaults under some conditions

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
   - cd charmm && python test_charmm.py --verbose && cd ..
 
 os:
-  - osx
+  #- osx # LEaP segfaults on osx under some conditions
   - linux
 
 env:
